# SnowENGINE

./: .gitignore  CMakeLists.txt  GOALS.md  build.sh  makefile  rebuild.sh  run.sh  snow
config/: collectableManagerDeclarations.json  control_config.json  enemieManagerDeclarations.json  sceneManagerDeclarations.json  soundManagerDeclarations.json  textureManagerDeclarations.json
include/: AnimatedObject.hpp  Animation.hpp  AnimationFactory.hpp  Animator.hpp  BasicCollider.hpp  BlueprintRegistry.hpp  Bullet.hpp  BulletManager.hpp  Cache.hpp  CameraBuilder.hpp  CameraComponent.hpp  CameraID.hpp  CameraManager.hpp  CameraView.hpp  Collectable.hpp  CollectableManager.hpp  ColorPalette.hpp  Constants.hpp  DialogueManager.hpp  EnemyManager.hpp  EnemyRegistry.hpp  Engine.hpp  FontAtlas.hpp  FrameContext.hpp  GameCamera.hpp  GameLoader.hpp  GameObject.hpp  GameObjectExposure.hpp  GameState.hpp  GameText.hpp  GameTextBuilder.hpp  GameWindow.hpp  GeneralContext.hpp  Helpers.hpp  IEventListener.hpp  InputManager.hpp  LevelManager.hpp  LifeCycleManager.hpp  MapLifecycle.hpp  NamedScript.hpp  (+40 more)
snowlang/: .clang-format  .gitignore
src/: AnimatedObject.cpp  AnimationFactory.cpp  Animator.cpp  BasicCollider.cpp  Bullet.cpp  BulletManager.cpp  CameraBuilder.cpp  CameraComponent.cpp  CameraManager.cpp  CameraView.cpp  CollectableManager.cpp  DialogueManager.cpp  EnemyManager.cpp  EnemyRegistry.cpp  GameCamera.cpp  GameLoader.cpp  GameObject.cpp  GameObjectExposure.cpp  GameState.cpp  GameText.cpp  GameTextBuilder.cpp  Helpers.cpp  InputManager.cpp  LevelManager.cpp  ObjectBuilder.cpp  ParticleManager.cpp  ParticleRenderComponent.cpp  PhysicsComponent.cpp  PolyRenderizer.cpp  (+14 more)
(+95 files in other folders)
